modified:   app/locales/core/simple_form.en.yml 	new file:   app/locales/core/simple_form.en.yml~ 	modified:   app/locales/core/site.en.yml 	renamed:    app/locales/core/site.en.yml -> app/locales/core/site.en.yml~ 	modified:   app/locales/modules/backer_report_to_project_owner.en.yml 	new file:   app/locales/modules/backer_report_to_project_owner.en.yml~ 	modified:   app/locales/modules/controllers.en.yml 	new file:   app/locales/modules/controllers.en.yml~ 	modified:   app/locales/modules/devise.en.yml 	new file:   app/locales/modules/devise.en.yml~ 	modified:   app/locales/modules/footer.en.yml 	new file:   app/locales/modules/footer.en.yml~ 	modified:   app/locales/pages/channels/profiles/show.en.yml 	new file:   app/locales/pages/channels/profiles/show.en.yml~ 	modified:   app/locales/pages/companies/contacts/new.en.yml 	new file:   app/locales/pages/companies/contacts/new.en.yml~ 	modified:   app/locales/pages/devise/registrations/new.en.yml 	new file:   app/locales/pages/devise/registrations/new.en.yml~ 	modified:   app/locales/pages/devise/sessions/new.en.yml 	new file:   app/locales/pages/devise/sessions/new.en.yml~ 	modified:   app/locales/pages/projects/contributions/index.en.yml         new file:   app/locales/pages/projects/contributions/index.en.yml~ 	modified:   app/locales/pages/projects/contributions/show.en.yml 	new file:   app/locales/pages/projects/contributions/show.en.yml~ 	modified:   app/locales/pages/projects/index.en.yml 	new file:   app/locales/pages/projects/index.en.yml~ 	modified:   app/locales/pages/projects/project.en.yml 	new file:   app/locales/pages/projects/project.en.yml~ 	modified:   app/locales/pages/projects/show.en.yml 	new file:   app/locales/pages/projects/show.en.yml~ 	modified:   app/locales/pages/start.en.yml 	new file:   app/locales/pages/start.en.yml~ 	modified:   app/locales/pages/users/set_email.en.yml 	new file:   app/locales/pages/users/set_email.en.yml~ 	new file:   config/database.yml~ 	modified:   db/seeds.rb 	n

--- a/app/locales/core/site.en.yml
+++ b/app/locales/core/site.en.yml
@@ -1,11 +1,11 @@
 en:
   facebook_locale: 'en_US'
   site:
-    title: "Invest in civic projects you care about"
+    title: "Help People in Hard Times"
     meta_title:  "%{title} · %{company_name}"
-    description: "Crowdfunding for civic projects. Invest in places and civic projects you care about."
-    keywords: "Neighbor.ly, crowdfunding, project, community, open source, civic"
+    description: "Together We Can Make It Happen."
+    keywords: "Silveralms.com, crowdfunding, project, community, food, daily bread"
     email:
-      contact: 'howdy@neighbor.ly'
+      contact: 'comjitsolutions@gmail.com'
     ograph:
-      description: "Neighbor.ly is the best way for people, companies, and foundations to invest in the places and civic projects they care about."
+      description: "Silver Alms is the best way for people and communities to get funded for their need."
