--- a/app/locales/pages/companies/contacts/new.en.yml
+++ b/app/locales/pages/companies/contacts/new.en.yml
@@ -2,5 +2,5 @@ en:
   companies:
     contacts:
       new:
-        title: 'Request a Demo'
-        summary: 'Want to do more with your cause marketing and CSR dollars? Looking for civic sponsorship opportunities? Our mission is to help companies like yours be more neighborly. Find out how! Schedule a free demo and tour.'
+        title: 'Contact Us'
+        summary: 'Do you have a doubt on any thing on Silver Alms, Feel free to ask to out Representative'
