--- a/app/locales/pages/start.en.yml
+++ b/app/locales/pages/start.en.yml
@@ -1,8 +1,8 @@
 en:
   static:
     start:
-      title: "Neighbor.ly is a collaborative way to build the civic projects you care about."
-      subtitle: "Use this guide to start building a better community!"
+      title: "Silver Alms is a nice way to get funded for your needs."
+      subtitle: "Use this guide to start building a better world!"
       submit: "Get Started"
       one:
         title: "Submit"
@@ -18,17 +18,17 @@ en:
         text: "Your project has been approved and your campaign has been planned, now you're ready to go live! Utilize the tools at hand to reach a broad audience and be sure to keep your supporters engaged and updated. 3... 2... 1... blast off!"
       need: "You'll need:"
       team: "A Strong Team"
-      copy: "Detailed Copy"
-      picture: "Beautiful Images"
-      reward: "Compelling Rewards"
-      video: "A Creative Video"
-      more_questions: "We believe that building better communities literally starts from the ground up and that all members of a community should have the opportunity to give back in a meaningful way."
+      copy: "Nice Description"
+      picture: "Original Images"
+      reward: "Rewards (Optional)"
+      video: "Nice Video"
+      more_questions: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse pharetra, orci euismod auctor elementum, nunc leo consectetur nisl, sit amet egestas nunc mauris a enim. Sed adipiscing ultrices venenatis. Duis vel odio adipiscing tortor sodales tempor."
       difference:
-        title: "The Neighbor.ly Difference"
-        text: "Neighbor.ly was developed as a fundraising toolkit to help communities pay for the things they truly care about. Simply put, we connect underfunded civic projects to alternative sources of funding. With our tools at their disposal, individuals, corporations and foundations all contribute to build stronger, healthier & smarter communities."
+        title: "Feature 1"
+        text: "Nam libero diam, sollicitudin ac tempor in, tempor nec quam. Ut feugiat leo eget sodales cursus. Vestibulum id lorem in nibh lobortis gravida sed at nisl. Donec nec feugiat enim. Quisque id aliquam felis. Nam pulvinar tellus non cursus dignissim. Proin euismod ante ac turpis luctus, a accumsan lorem dictum. Sed et auctor arcu, eu scelerisque augue. Aenean in leo enim. Proin tempus magna non faucibus pretium. Maecenas tristique diam ac pharetra euismod. Ut congue lacus urna. Maecenas ornare sed augue a auctor. In ac lacus eu lectus pulvinar aliquet."
       work:
-        title: "Hard Work & Persistence"
-        text: "The more effort you put into your campaign, the better the results you'll see. Take a look through our best practices in order to maximize your return and remember, it's not just about the money. While running a Neighbor.ly campaign,  you're raising awareness, building a support base, establishing partnerships and engaging a national community of people just like you."
+        title: "Feature 2"
+        text: "Nam libero diam, sollicitudin ac tempor in, tempor nec quam. Ut feugiat leo eget sodales cursus. Vestibulum id lorem in nibh lobortis gravida sed at nisl. Donec nec feugiat enim. Quisque id aliquam felis. Nam pulvinar tellus non cursus dignissim. Proin euismod ante ac turpis luctus, a accumsan lorem dictum. Sed et auctor arcu, eu scelerisque augue. Aenean in leo enim. Proin tempus magna non faucibus pretium. Maecenas tristique diam ac pharetra euismod. Ut congue lacus urna. Maecenas ornare sed augue a auctor. In ac lacus eu lectus pulvinar aliquet."
       costs:
-        title: "Low & Equitable Fees"
-        text: "When we set out to change the way civic projects were financed, we knew we had to make this toolset available to every community. That's why Neighbor.ly takes a low 5% fee for successfully funded projects and charges nothing upfront. That's it. Payment fees associated with each transaction are paid for directly by the contributor."
+        title: "Feature 3"
+        text: "Nam libero diam, sollicitudin ac tempor in, tempor nec quam. Ut feugiat leo eget sodales cursus. Vestibulum id lorem in nibh lobortis gravida sed at nisl. Donec nec feugiat enim. Quisque id aliquam felis. Nam pulvinar tellus non cursus dignissim. Proin euismod ante ac turpis luctus, a accumsan lorem dictum. Sed et auctor arcu, eu scelerisque augue. Aenean in leo enim. Proin tempus magna non faucibus pretium. Maecenas tristique diam ac pharetra euismod. Ut congue lacus urna. Maecenas ornare sed augue a auctor. In ac lacus eu lectus pulvinar aliquet."
